chore: clean code quick wins